--- a/.github/workflows/contentful-migrations.yml
+++ b/.github/workflows/contentful-migrations.yml
@@ -37,10 +37,10 @@ jobs:
           dotnet-version: 8.0.x
           cache: true
           cache-dependency-path: |
-              src/contentful/CareLeavers.ContentfulMigrations/packages.lock.json
+              src/contentful/CareLeavers.ContentfulMigration/packages.lock.json
 
       - name: Deploy Contentful migrations
-        working-directory: ./src/contentful/CareLeavers.ContentfulMigrations
+        working-directory: ./src/contentful/CareLeavers.ContentfulMigration
         env:
           ContentfulOptions__DeliveryApiKey: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
           ContentfulOptions__SpaceId: ${{ secrets.CONTENTFUL_SPACE_ID }}
