--- a/.github/workflows/generate-zap-scan.yaml
+++ b/.github/workflows/generate-zap-scan.yaml
@@ -3,25 +3,45 @@ name: Generate - Zap Scan
 on:
   workflow_dispatch:
     inputs:
-      environment_prefix:
-        description: 'Environment Prefix'
+      environment:
+        type: choice
+        description: 'Environment to run scan against'
         required: true
-        default: 'd01'
+        default: 'Test'
         options:
-          - 'd01'
+          - 'Test'
+          - 'Staging'
 jobs:
   zap_scan:
     name: 'Run Zap Scan'
     runs-on: ubuntu-latest
+    environment:
+      name: ${{ github.event.inputs.environment }}
     steps:
       - uses: actions/checkout@v4
+
+      - name: 'Az CLI login'
+        uses: azure/login@v1
+        with:
+          creds: |
+            {
+                "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
+                "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+                "tenantId": "${{ secrets.AZURE_TENANT_ID }}",
+                "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+            }
+
+      - name: Get Azure Frontdoor URL
+        run: |
+          FRONTDOOR_URL=$(az afd endpoint list -g s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --profile-name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-fd-profile | jq -r '.[0].hostName')
+          echo "FRONTDOOR_URL=$FRONTDOOR_URL" >>${GITHUB_ENV}
 
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'https://s186${{ github.event.inputs.environment_prefix }}-cl-web-fd.azurefd.net'
+          target: 'https://${{ env.FRONTDOOR_URL }}'
           rules_file_name: 'src/rules.tsv'
           cmd_options: '-a'
           allow_issue_writing: 'false'
