--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -14,39 +14,39 @@ on:
           - 'Production'
 
 jobs:
-#  package:
-#    name: 'Package Web in Docker'
-#    runs-on: ubuntu-latest
-#    defaults:
-#      run:
-#        working-directory: ./src
-#    permissions:
-#      contents: read
-#      packages: write
-#
-#    steps:
-#      - uses: actions/checkout@v4
-#
-#      - name: Lowercase the repo name and username
-#        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-#
-#      - name: Build Web Docker Image
-#        run: |
-#          docker build . -t ghcr.io/${{ env.REPO }}:${{ github.sha }} -f web/CareLeavers.Web/Dockerfile
-#
-#      - uses: docker/login-action@v1
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.actor }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Push Web Docker Image
-#        run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
+  package:
+    name: 'Package Web in Docker'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Lowercase the repo name and username
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: Build Web Docker Image
+        run: |
+          docker build . -t ghcr.io/${{ env.REPO }}:${{ github.sha }} -f web/CareLeavers.Web/Dockerfile
+
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push Web Docker Image
+        run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
 
   deploy_environment:
     name: 'Deploy Environment'
     runs-on: ubuntu-latest
-#    needs: [package]
+    needs: [package]
     permissions:
       contents: read
       id-token: write
@@ -76,16 +76,16 @@ jobs:
                 "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
             }
 
-#      - name: Create TF State dependencies
-#        uses: azure/cli@v2
-#        with:
-#          azcliversion: latest
-#          inlineScript: |
-#            az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-#
-#            az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
-#
-#            az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
+      - name: Create TF State dependencies
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
+
+            az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
+
+            az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
 
       - name: 'Terraform Init'
         id: terraform_init
@@ -114,22 +114,22 @@ jobs:
         working-directory: ./src/infrastructure/terraform
         run: terraform apply plan.plan
 
-#      - name: Lowercase the repo name and username
-#        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-#
-#      - name: 'Get publishing profile'
-#        run: |
-#          publishingProfile=$(az webapp deployment list-publishing-profiles --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --slot staging --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --xml)
-#          echo "PUBLISHING_PROFILE=$publishingProfile" >>${GITHUB_ENV}
-#
-#      - name: Deploy to Azure Web App
-#        id: deploy-to-webapp
-#        uses: azure/webapps-deploy@v2
-#        with:
-#          app-name: ${{ vars.DEV_AZURE_WEBAPP_NAME }}
-#          slot-name: 'staging'
-#          publish-profile: ${{ env.PUBLISHING_PROFILE }}
-#          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
-#
-#      - name: Swap slot to production
-#        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
+      - name: Lowercase the repo name and username
+        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
+      - name: 'Get publishing profile'
+        run: |
+          publishingProfile=$(az webapp deployment list-publishing-profiles --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --slot staging --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --xml)
+          echo "PUBLISHING_PROFILE=$publishingProfile" >>${GITHUB_ENV}
+
+      - name: Deploy to Azure Web App
+        id: deploy-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ vars.DEV_AZURE_WEBAPP_NAME }}
+          slot-name: 'staging'
+          publish-profile: ${{ env.PUBLISHING_PROFILE }}
+          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+
+      - name: Swap slot to production
+        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
