Added default cache duration to configuration (30 days)

--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -20,7 +20,8 @@
   },
   "Caching": {
     "Type": "Memory",
-    "ConnectionString": ""
+    "ConnectionString": "",
+    "Duration": "30.00:00:00"
   },
   "ApplicationInsights": {
     "ConnectionString": ""
