--- a/src/web/CareLeavers.Web/appsettings.json
+++ b/src/web/CareLeavers.Web/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "UseMockedContentful": false,
   "AllowedHosts": "*",
   "ContentfulOptions": {
     "DeliveryApiKey": "",
