--- a/.github/workflows/validate-e2e.yaml
+++ b/.github/workflows/validate-e2e.yaml
@@ -45,14 +45,14 @@ jobs:
         run: yarn playwright test -c playwright-ci.config.ts
       
       - name: Upload Playwright Test Report
-        uses: actions/upload-artifact@v2
+        uses: github/upload-artifact@v1
         with:
           name: playwright-report
           path: ./src/e2e/CareLeavers.E2ETests/playwright-report
 
       - name: Upload Screenshots on Failure
         if: failure()
-        uses: actions/upload-artifact@v2
+        uses: github/upload-artifact@v1
         with:
           name: playwright-screenshots
           path: ./src/e2e/CareLeavers.E2ETests/test-results/screenshots/
