--- a/src/infrastructure/docker/docker-compose.yml
+++ b/src/infrastructure/docker/docker-compose.yml
@@ -8,5 +8,5 @@ services:
       - "7050:8080"
     environment:
       ASPNETCORE_ENVIRONMENT: EndToEnd
-      UseMockedContentful: false
+      UseMockedContentful: true
       Caching__Type: "None"
