--- a/.github/workflows/deploy-github-documentation.yaml
+++ b/.github/workflows/deploy-github-documentation.yaml
@@ -2,7 +2,13 @@ name: Publish docs via GitHub Pages
 on:
   push:
     branches:
+      - main
       - docs/**
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - 'resources/tech_docs_template/**'
+      - '.github/workflows/deploy-github-documentation.yaml'
 
 jobs:
   build:
@@ -14,11 +20,7 @@ jobs:
 
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
-        # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          CUSTOM_DOMAIN: optionaldomain.com
           CONFIG_FILE: mkdocs.yml
-#          EXTRA_PACKAGES: build-base
-          # GITHUB_DOMAIN: github.myenterprise.com
           REQUIREMENTS: folder/requirements.txt
