--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -106,6 +106,7 @@ jobs:
           TF_VAR_contentful_use_preview_api: ${{ vars.CONTENTFUL_PREVIEW }}
           TF_VAR_caching_type: ${{ vars.CACHING_TYPE }}
           TF_VAR_scripts_clarity: ${{ vars.SCRIPTS_CLARITY }}
+          TF_VAR_custom_domain: ${{ vars.CUSTOM_DOMAIN }}
           TF_VAR_aspnetcore_environment: ${{ github.event.inputs.environment }}
 
       - name: 'Terraform Apply'
@@ -121,14 +122,14 @@ jobs:
           publishingProfile=$(az webapp deployment list-publishing-profiles --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --slot staging --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --xml)
           echo "PUBLISHING_PROFILE=$publishingProfile" >>${GITHUB_ENV}
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: ${{ vars.DEV_AZURE_WEBAPP_NAME }}
-          slot-name: 'staging'
-          publish-profile: ${{ env.PUBLISHING_PROFILE }}
-          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
-
-      - name: Swap slot to production
-        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
+#      - name: Deploy to Azure Web App
+#        id: deploy-to-webapp
+#        uses: azure/webapps-deploy@v3
+#        with:
+#          app-name: ${{ vars.DEV_AZURE_WEBAPP_NAME }}
+#          slot-name: 'staging'
+#          publish-profile: ${{ env.PUBLISHING_PROFILE }}
+#          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+#
+#      - name: Swap slot to production
+#        run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
