--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -11,7 +11,6 @@ on:
         options:
           - 'Test'
           - 'Staging'
-          - 'Production'
       clear-cache:
         type: choice
         description: 'Clear the cache?'
@@ -23,7 +22,7 @@ on:
   release:
     types: [ published ]
 
-run-name: Deploy to ${{ github.event.inputs.environment || (github.event.release.prerelease && 'Test') || 'Production' }}
+run-name: Deploy to ${{ (github.event_name == 'release' && (github.event.release.prerelease && 'Test' || 'Production')) || github.event.inputs.environment }}
 
 jobs:
   package:
@@ -68,45 +67,15 @@ jobs:
       - name: Push Web Docker Image
         run: docker push ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }}
 
-  determine_environment:
-    name: Determine Environment
-    runs-on: ubuntu-latest
-    outputs:
-      environment: ${{ steps.vars.outputs.environment }}
-      clear_cache: ${{ steps.vars.outputs.clear_cache }}
-    steps:
-      - name: Set dynamic variables
-        id: vars
-        run: |
-          if [[ "${{ github.event_name }}" == "release" ]]; then
-            echo "Triggered by release."
-            if [[ "${{ github.event.release.prerelease }}" == "true" ]]; then
-              echo "This is a pre-release. Setting environment to Test."
-              echo "environment=Test" >> $GITHUB_OUTPUT
-            else
-              echo "This is a full release. Setting environment to Production."
-              echo "environment=Production" >> $GITHUB_OUTPUT
-            fi
-          
-            # Keep the cache logic from the release body
-            BODY="${{ github.event.release.body }}"
-            CACHE_VALUE=$(echo "$BODY" | grep 'clear-cache:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
-            echo "clear_cache=${CACHE_VALUE:-False}" >> $GITHUB_OUTPUT
-          else
-            echo "Triggered manually. Using workflow dispatch inputs."
-            echo "environment=${{ github.event.inputs.environment }}" >> $GITHUB_OUTPUT
-            echo "clear_cache=${{ github.event.inputs.clear-cache }}" >> $GITHUB_OUTPUT
-          fi
-
   deploy_environment:
-    name: Deploying site to ${{ needs.determine_environment.outputs.environment }}
+    name: Deploying site to ${{ (github.event_name == 'release' && (github.event.release.prerelease && 'Test' || 'Production')) || github.event.inputs.environment }}
     runs-on: ubuntu-latest
-    needs: [ package, determine_environment ]
+    needs: [ package ]
     permissions:
       contents: read
       id-token: write
     environment:
-      name: ${{ needs.determine_environment.outputs.environment }}
+      name: ${{ (github.event_name == 'release' && (github.event.release.prerelease && 'Test' || 'Production')) || github.event.inputs.environment }}
     env:
       ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
@@ -114,10 +83,24 @@ jobs:
       ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
 
     steps:
-      - name: Display Determined Variables
+      - name: Set dynamic variables
+        id: vars
         run: |
-          echo "Deployment Environment: ${{ needs.determine_environment.outputs.environment }}"
-          echo "Clear Cache: ${{ needs.determine_environment.outputs.clear_cache }}"
+          # Set Environment Name as an environment variable for use in later steps
+          ENV_NAME="${{ (github.event_name == 'release' && (github.event.release.prerelease && 'Test' || 'Production')) || github.event.inputs.environment }}"
+          echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
+          echo "Deployment Environment: $ENV_NAME"
+
+          # Set Clear Cache as a step output for use in 'if' conditions
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            BODY="${{ github.event.release.body }}"
+            CACHE_VALUE=$(echo "$BODY" | grep 'clear-cache:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
+            echo "clear_cache=${CACHE_VALUE:-False}" >> $GITHUB_OUTPUT
+            echo "Clear Cache: ${CACHE_VALUE:-False}"
+          else
+            echo "clear_cache=${{ github.event.inputs.clear-cache }}" >> $GITHUB_OUTPUT
+            echo "Clear Cache: ${{ github.event.inputs.clear-cache }}"
+          fi
 
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
@@ -142,9 +125,7 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-
             az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
-
             az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
 
       - name: 'Terraform Init'
@@ -157,7 +138,7 @@ jobs:
         working-directory: ./src/infrastructure/terraform
         run: terraform plan -out plan.plan
         env:
-          TF_VAR_aspnetcore_environment: ${{ needs.determine_environment.outputs.environment }}
+          TF_VAR_aspnetcore_environment: ${{ env.ENV_NAME }}
           TF_VAR_environment_prefix: ${{ vars.ENVIRONMENT_PREFIX }}
           TF_VAR_cip_environment: ${{ vars.CIP_ENVIRONMENT }}
           TF_VAR_contentful_delivery_api_key: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
@@ -202,7 +183,7 @@ jobs:
       - name: Clear Cache
         id: clear-cache
         uses: fjogeleit/http-request-action@v1
-        if: ${{ needs.determine_environment.outputs.clear_cache == 'True' }}
+        if: ${{ steps.vars.outputs.clear_cache == 'True' }}
         with:
           url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
           method: 'POST'
